Add google site verification

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="google-site-verification" content="2OTKAcS4c2sUU9pRzw6DVv0PoY9gCsDd1SJX9Je5CNo" />
     <meta
       name="description"
       content="A piano game to improve your note reading skills"
